--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
             <name>John Thompson</name>
             <organization>Spring Framework Guru</organization>
         </developer>
+        <developer>
+            <name>Michael File</name>
+            <organization>CNET Inc.</organization>
+        </developer>
     </developers>
 
     <properties>
@@ -84,6 +88,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
